fixed responsiveness on small laptop screens, tablets and mobile

--- a/style.css
+++ b/style.css
@@ -55,6 +55,54 @@ nav ul li a:hover{
     border-bottom: 1px solid #fff;
 }
 
+.menu {
+    position: relative;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.bar {
+    width: 30px;
+    height: 4px;
+    background: #fff;
+    border-radius: 4px;
+    transition: all .4s ease-in-out;
+}
+
+.bar::before,
+.bar::after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 4px;
+    background: #fff;
+    border-radius: 4px;
+    transition: all .4s ease-in-out;
+}
+
+.bar::before {
+    transform: translateY(-10px);
+}
+
+.bar::after {
+    transform: translateY(10px);
+}
+
+.menu.open .bar {
+    transform: translateX(-30px);
+    background: transparent;
+}
+
+.menu.open .bar::before {
+    transform: rotate(45deg) translate(20px, -20px);
+}
+
+.menu.open .bar::after {
+    transform: rotate(-45deg) translate(20px, 20px);
+}
+
 .cover {
     height: 784px;
     padding: 0 6em;
@@ -74,7 +122,7 @@ nav ul li a:hover{
 
 .subtitle {
     width: 60%;
-    margin: 2em 1em 3em 1em;
+    margin: 2em 1em 3em 0;
     line-height: 25px;
 }
 
@@ -93,7 +141,6 @@ nav ul li a:hover{
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    margin-left: 1em;
 }
 
 .cat {
@@ -141,6 +188,10 @@ nav ul li a:hover{
 
 .pic {
     position: relative;
+}
+
+.pic img {
+    object-fit: fill;
 }
 
 .overlay {
@@ -384,5 +435,393 @@ footer {
     padding-bottom: 2em;
 }
 
+/* RESPONSIVENESS */
 
+/* small screen laptop */
+
+@media screen and (max-width: 1024px) {
+    .cover .title {
+        font-size: 3.5rem;
+    }
+
+    .we {
+        padding: 7em 5em;
+    }
+
+    .pic {
+        width: 50%;
+        height: 100%;
+    }
+
+    .pic img {
+        width: 100%;
+        display: block;
+        object-fit: fill;
+    }
+
+    .overlay {
+        background: rgba(0, 29, 69, 0.9);
+        width: 7em;
+        height: 7em;
+    }
+
+    .card-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .vision {
+        padding: 7em;
+    }
+
+    .more-info {
+        padding: 4em;
+    }
+
+    .more-info-text {
+        width: 58%;
+    }
+    
+    .more-info-img {
+        position: absolute;
+        bottom: -50px;
+        right: 60px;
+    }
+    
+    .more-info-img img {
+        width: 300px;
+        display: block;
+    }
+    
+    .img-overlay {
+        width: 300px;
+        height: 275px;
+        background: #0177B2;
+        position: absolute;
+        bottom: -65px;
+        right: 80px;
+        border-radius: 60px;
+        box-shadow: -5px 1px 40px 2px #0177B2;
+    }
+}
+
+
+/* Tablet */
+
+@media screen and (max-width: 768px) {
+    .cover {
+        height: 604px;
+    }
+
+    .cover .title {
+        font-size: 2.3rem;
+    }
+
+    .subtitle {
+        width: 75%;
+    }
+
+    .subtitle h3 {
+        margin-bottom: .5em;
+        font-size: 1.4rem;
+    }
+    
+    .subtitle p {
+        font-size: 1rem;
+        line-height: 32px;
+    }
+
+    .categories {
+        width: 100%;
+    }
+
+    .cat a{
+        font-size: 14px;
+    }
+
+    .upper-grp {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .text {
+        width: 100% !important; 
+        margin-bottom: 2em;
+    }
+
+    .upper-grp .text p{
+        margin-top: 2em;
+        line-height: 24px;
+        font-size: 16px;
+    }
+
+    .details p {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .pic {
+        width: 100%;
+    }
+
+    .we {
+        padding: 7em 5em;
+    }
+
+    .pic img {
+        width: 100%;
+        display: block;
+        object-fit: fill;
+    }
+
+    .overlay {
+        background: rgba(0, 29, 69, 0.9);
+        width: 7em;
+        height: 7em;
+    }
+
+    .core-pillars {
+        padding: 3em;
+    }
+
+    .card-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .card-title {
+        font-size: 16px;
+    }
+
+    .vision {
+        padding: 4em;
+    }
+
+    .vision-card p {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .title-flex h3 {
+        font-size: 24px;
+        line-height: 36px;
+    }
+    
+    .title-flex img {
+        width: 25px;
+    }
+
+    .more-info {
+        padding: 4em;
+    }
+
+    .more-info-text {
+        width: 80%;
+    }
+    
+    .more-info-img {
+        display: none;
+    }
+    
+    .more-info-img img {
+        width: 300px;
+        display: block;
+    }
+    
+    .img-overlay {
+        display: none;
+    }
+
+    footer {
+        padding-inline: 1em;
+    }
+
+    .footer-flex {
+        width: 90%;
+    }
+
+    .footer-flex-item {
+        line-height: 28px;
+        font-size: 16px;
+    }
+}
+
+/* mobile */
+
+@media screen and (max-width: 425px) {
+    header {
+        height: 58px;
+        padding: 0 2em;
+        position: relative;
+    }
+
+    .logo img{
+        width: 80px;
+        position: relative;
+        z-index: 7;
+    }
+
+    nav {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 58px;
+        transform: translateY(-400px);
+        opacity: 0;
+        transition: all 0.6s ease-in-out;
+    }
+
+    nav ul {
+        flex-direction: column;
+        background: #001D45;
+        width: 100%;
+        align-items: flex-end;
+        gap: 1.5em;
+        padding: 1em 0;
+        z-index: 2;
+    }
+
+    .menu {
+        display: flex;
+    }
+
+    .show {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+
+    .cover {
+        padding: 0 2em;
+    }
+
+    .cover .title {
+        font-size: 2.1rem;
+        padding-top: 3em;
+    }
+
+    .subtitle {
+        width: 100%;
+    }
+
+    .subtitle h3 {
+        margin-bottom: .5em;
+        font-size: 1.4rem;
+    }
+    
+    .subtitle p {
+        font-size: 1rem;
+        line-height: 32px;
+    }
+
+    .categories {
+        width: 100%;
+    }
+
+    .cat {
+        width: 48%;
+    }
+
+    .cat a{
+        width: 80%;
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .we {
+        padding: 3em;
+    }
+
+    .overlay {
+        display: none;
+    }
+
+    .lower-grp {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 5em;
+    }
+
+    .text-content {
+        width: 100%;
+        margin-bottom: 2em;
+    }
+
+    .core-pillars {
+        padding: 2em;
+    }
+
+    .card-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .vision {
+        padding: 2em;
+        flex-direction: column;
+    }
+
+    .vision-card {
+        width: 100%;
+        margin-bottom: 2em;
+    }
+
+    .more-info {
+        padding: 2em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .more-info-text {
+        width: 100%;
+    }
+
+    .more-info-text h2 {
+        font-size: 1.7rem;
+        line-height: 32px;
+    }
+
+    .enquiry {
+        font-size: 1rem;
+    }
+
+    .footer-flex {
+        flex-direction: column;
+        align-items: flex-start;
+        margin-block: 3em;
+    }
+
+    .bottom {
+        margin-bottom: 1em;
+    }
+
+    .footer-flex-item ul {
+        display: flex;
+        margin-top: 2em;
+        gap: 1em;
+    }
+
+}
+
+@media screen and (max-width: 375px) {
+    .cover .title {
+        font-size: 2rem;
+        padding-top: 3em;
+    }
+
+    .subtitle h3 {
+        margin-bottom: .5em;
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover .title {
+        font-size: 1.7rem;
+        padding-top: 3em;
+    }
+
+    .subtitle h3 {
+        margin-bottom: .5em;
+        font-size: 1.2rem;
+    }
+}
 
